# sbib-bot

./: .gitignore  .replit  CMakeLists.txt  README.md  compile_commands.json  index.html  libdpp.deb  main.sh  replit.nix  replit_zip_error_log.txt
.cache/clangd/index/: appcommand.h.081EED8454D47CCC.idx  appcommand.h.519E40EA770B79A5.idx  application.h.22EF6B94CC3CFF5D.idx  application.h.5AC6616548A322F6.idx  async.h.67929A4469F2BBE5.idx  auditlog.h.25F0767F84BA5F56.idx  auditlog.h.B1A5E555CB871B5E.idx  automod.h.862280A8DE88FC87.idx  automod.h.9FD5821B6F322F6C.idx  ban.h.F1816812BF83F079.idx  ban.h.F1DCE074C94047C4.idx  cache.h.D4D08F3FE11D430E.idx  cache.h.E494E279B457E8B8.idx  channel.h.2B8278DAA6016766.idx  channel.h.82EE7213CF1F7B66.idx  cluster.h.0EE5F976814E1895.idx  cluster.h.FCE6D5FDBBB1EB31.idx  cluster_sync_calls.h.8BA11CBEE65A1487.idx  cluster_sync_calls.h.C02894399741D7C7.idx  collector.h.5F0A5A0B1DF95F23.idx  collector.h.800661034B21905D.idx  colors.h.367170BD84354497.idx  colors.h.E72E1DC1A00698AF.idx  commandhandler.h.D6852EA6336F83D7.idx  commandhandler.h.DFA8433C7F6A9A68.idx  coro.h.6CAF196F8376FE68.idx  discordclient.h.201ECB851045BB39.idx  discordclient.h.97630840FD31A0C1.idx  discordevents.h.649FA534FE06D4B2.idx  discordevents.h.65B5C53ECE702855.idx  discordvoiceclient.h.7D7FA7DB53B7CF21.idx  discordvoiceclient.h.D7F7BAA5D4A3DCC1.idx  dispatcher.h.1E72D8C900B7C8CE.idx  dispatcher.h.798536C86532E42C.idx  dpp.h.ED1171AB564CE1E7.idx  dpp.h.F6873C60A130D66C.idx  dtemplate.h.6D3A94F2A74ADE25.idx  (+92 more)
.cache/replit/: __replit_disk_meta.json
src/: main.cpp  sbib.cpp  sbib.h
(+1 files in other folders)
